--- a/application/modules/performer/views/scripts/performers/performer-view.phtml
+++ b/application/modules/performer/views/scripts/performers/performer-view.phtml
@@ -11,7 +11,7 @@
   <div class="row transitionfx"> 
     
     <!-- left column -->
-    <div class="col-lg-6 col-md-6 col-sm-6"> 
+    <div class="col-lg-4 col-md-4 col-sm-4"> 
       <!-- product Image and Zoom -->
       
       <div class="main-image sp-wrap col-lg-12 no-padding style3" style="display: inline-block;">
@@ -25,36 +25,16 @@
     <!--/ left column end --> 
     
     <!-- right column -->
-    <div class="col-lg-6 col-md-6 col-sm-5">
-      <h1 class="product-title"><?= $this->performer['username'].' '.$this->performer['surname'] ?></h1>
-      <?php $sec = time()-$this->performer['birth_date'];
+    <div class="col-lg-8 col-md-8 col-sm-8">
+        <div class="col-sm-4">
+            <h1 class="product-title"><?= $this->performer['username'].' '.$this->performer['surname'] ?></h1>
+        </div>
+              <?php $sec = time()-$this->performer['birth_date'];
             $age = $sec/31556926;
             $age = floor($age);
       ?>
-      <h3 class="product-code">Возраст : <?= $age; ?> лет</h3>
-      <?php
-      if($this->closedTasks){
-         $closedTasksAmount = count($this->closedTasks);
-      
-      ?>
-      <?php if($closedTasksAmount){ ?>
-        <h3 class="product-code"> Выполненных работ: <span class="price-sales"><?= $closedTasksAmount ?></span> </h3>
-      <?php }else{ ?>
-        <h3 class="product-code"> Пользователь еще не завершил ни одного задания</h3>
-      <?php
-      } 
-      }
-      ?>
-      <div class="details-description">
-          <h3 class="product-code">Сферы деятельности :</h3>
-          
-              <?php foreach($this->usersCategories as $cat){?>
-                <small><?= $cat['c_title'].' '; ?></small></br>
-              <?php } ?>
-          
-      </div>
-      <?php if($closedTasksAmount){ ?>
-      <div class="color-details"> <span class="selected-color"><strong>Рейтинг</strong></span>
+        <div class="col-sm-8">
+  <?php if($closedTasksAmount){ ?>
                        <ul class="swatches Color">
           <?php switch ($this->rating){
               case 1:?>
@@ -103,8 +83,37 @@
           <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
           <?php }?>
         </ul>
-      </div>
+  
       <?php } ?>
+        </div>
+        <div class="col-sm-12">
+            <h3 class="product-code">Возраст : <?= $age; ?> лет</h3>
+         </div>
+         <div class="col-sm-12">
+      <?php
+      if($this->closedTasks){
+         $closedTasksAmount = count($this->closedTasks);
+      
+      ?>
+       
+      <?php if($closedTasksAmount){ ?>
+        <h3 class="product-code"> Выполненных работ: <span class="price-sales"><?= $closedTasksAmount ?></span> </h3>
+      <?php }else{ ?>
+        <h3 class="product-code"> Пользователь еще не завершил ни одного задания</h3>
+      <?php
+      } 
+      }
+      ?>
+        </div>
+      <div class="details-description col-sm-12">
+          <h3 class="product-code">Сферы деятельности :</h3>
+          
+              <?php foreach($this->usersCategories as $cat){?>
+                <small><?= $cat['c_title'].' '; ?></small></br>
+              <?php } ?>
+          
+      </div>
+    
       <!--/.color-details-->
 
       
@@ -114,7 +123,7 @@
       
       <div style="clear:both"></div>
       <?php if($this->performer['vk'] || $this->performer['ok'] || $this->performer['fb']){?>
-      <div class="product-share clearfix">
+      <div class="product-share clearfix col-sm-12">
         <p> Привязка к соцсетям </p>
         <div class="socialIcon">
             <?php if($this->performer['vk']){?>
