--- a/application/modules/customer/views/scripts/office/index.phtml
+++ b/application/modules/customer/views/scripts/office/index.phtml
@@ -22,8 +22,14 @@
 
     </div>
     </div>
+        <div class="col-sm-8" style="text-align: center">
+            <a style="text-decoration: underline" onclick="$('#imageInput').click();return false;">Сменить фото</a>
+        </div>
     </div><!--/ left column end -->
-    
+    <form   enctype="multipart/form-data" id="avatarForm" method="post" action="/customer/office/change-avatar">
+        <input type="hidden" name="userId" value="<?= $this->user['id'] ?>">
+        <input type="file" style="display:none" id="imageInput" name="image">
+    </form>
     
     <!-- right column -->
     <div class="col-lg-6 col-md-6 col-sm-5">
@@ -275,7 +281,9 @@
 $(document).ready(function(){ 
     $('#tasksTable').DataTable({
     });
-
+$('#imageInput').change(function(){
+   $('#avatarForm').submit();
+});
 
     $('#verificatePhoneNum').bind('click', function(){  
         
